# Cpp-TemplateBasics

./: .gitignore  CMakeLists.txt  README.md
DemoEnableIfAndPerfectForwardingWithTemplatedCtors/: .cproject  .project  out.txt
DemoEnableIfAndPerfectForwardingWithTemplatedCtors/src/: Base.h  main.cpp
DemoStack/: .cproject  .project  MainDemoStack.cpp  MixingTypTemplateParameter.cpp  StackFixedSized.h  StackWithContainerTemplateParameter.h  StackWithContainerTypeParameter.h  StackWithElementParameter.h
DemoTypeTraits/: .cproject  .project
DemoTypeTraits/src/: Traits.h  main.cpp
DynamicVSStaticPolymophism/: .project
DynamicVSStaticPolymophism/src/: Adapter.hpp  DemoDynamic.cpp  DemoDynamicPolymorphism.cpp  DemoDynamisedStaticPolymorphism.cpp  DemoStatic.cpp  DemoStaticDynamicMix.cpp  DemoStaticPolymorphism.cpp  DynamicPolymorphism.hpp  main.cpp  (+1 more)
DynamicVSStaticPolymorphism/: .cproject  CMakeLists.txt
DynamicVSStaticPolymorphism/.tracecompass/: .project
DynamicVSStaticPolymorphism/src/: AdapterByInheritance.hpp  DemoDynamicPolymorphism.cpp  DemoDynamisedStaticPolymorphism.cpp  DemoDynamisedStaticPolymorphismByInheritance.cpp  DemoStaticPolymorphism.cpp  DynamicPolymorphism.hpp  StaticPolymorphism.hpp
EmplaceAndAlignment/: .cproject
Enable_if/: .cproject  .project
FunctionTemplateValueTypeArguments/: .cproject  .project
InjectedClassNames/: .cproject  .project  Main.cpp
IsPowerOfTwo/: .cproject  .project
IteratorTraits/: .cproject  .project  IteratorTraits.vcxproj  IteratorTraits.vcxproj.filters  IteratorTraitsMain.cpp  Templates.h
PolicyBasedDesign/: .cproject  .project  AbstractProperty.cpp  Base.h  CheckPolicy.h  Host.h  NoCheckPolicy.h  main.cpp
PolicyBasedJoystick/: .cproject  .project  Joystick.h  Main.cpp
SmartPointer/: .gitignore  A3MemberBC.h  SharedPointer.h  UniquePointer.h  demoForwarding.cpp  main.cpp
VariadicTemplates/: .cproject  .project  VariadicTemplates.exe.stackdump
(+12 files in other folders)
